<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Flybuys</string>

    <!-- Navigation -->
    <string name="nav_home">Home</string>
    <string name="nav_collect">Collect</string>
    <string name="nav_wallet">Wallet</string>
    <string name="nav_redeem">Redeem</string>
    <string name="nav_activity">Activity</string>

    <!-- Home Screen -->
    <string name="greeting_morning">Morning, %s</string>
    <string name="greeting_afternoon">Afternoon, %s</string>
    <string name="greeting_evening">Evening, %s</string>
    <string name="points_balance_label">points</string>
    <string name="points_worth">worth %s Flybuys Dollars</string>
    <string name="choose_reward_prompt">Get started by choosing how you\'d like to be rewarded!</string>
    <string name="choose_reward">Choose reward</string>
    <string name="available_offers">Available offers</string>
    <string name="available_offers_subtitle">Activate your offers to collect more points</string>
    <string name="activated_offers">Activated offers</string>
    <string name="activated_offers_subtitle">Offers ready to shop</string>
    <string name="featured_promotions">Featured Promotions</string>

    <!-- Collect Screen -->
    <string name="collect_title">Collect</string>
    <string name="collect_banner">When you activate an offer, you can access them here.</string>
    <string name="offers_just_for_you">Offers just for you</string>
    <string name="view_all">View all</string>
    <string name="activate">Activate</string>
    <string name="hide">Hide</string>
    <string name="deactivate">Deactivate</string>
    <string name="ends_today">Ends today</string>
    <string name="days_left">%d days left</string>
    <string name="activated_label">Activated</string>

    <!-- Wallet Screen -->
    <string name="wallet_title">Wallet</string>
    <string name="your_flybuys_card">Your Flybuys Card</string>
    <string name="member_number">Member Number</string>
    <string name="scan_to_earn">Scan to earn points</string>
    <string name="digital_card">Digital Card</string>
    <string name="linked_cards">Linked Cards</string>
    <string name="add_card">Add a card</string>
    <string name="coles_mastercard">Coles Mastercard</string>

    <!-- Redeem Screen -->
    <string name="redeem_title">Redeem</string>
    <string name="ways_to_redeem">Ways to redeem points</string>
    <string name="promotions">Promotions</string>
    <string name="bunnings_banner_title">Use points for money off your in-store shop at Bunnings</string>
    <string name="learn_how">Learn how</string>

    <!-- Activity Screen -->
    <string name="activity_title">Activity</string>
    <string name="filter_transactions">Filter your transactions by points and date.</string>
    <string name="filter">Filter</string>
    <string name="all_caught_up">You\'re all caught up</string>
    <string name="transaction_delay_note">Sometimes transactions are delayed depending on the offer.</string>
    <string name="details">Details</string>
    <string name="points">Points</string>

    <!-- Partners Screen -->
    <string name="our_partners">Our partners</string>
    <string name="category_shopping">Shopping</string>
    <string name="category_financial">Financial</string>
    <string name="category_travel">Travel</string>

    <!-- Content Descriptions (Accessibility) -->
    <string name="cd_profile_icon">Profile icon</string>
    <string name="cd_gift_icon">Gift icon</string>
    <string name="cd_points_icon">Points icon</string>
    <string name="cd_offer_image">Offer image for %s</string>
    <string name="cd_partner_logo">%s partner logo</string>
    <string name="cd_flybuys_card">Flybuys card</string>

    <!-- Error States -->
    <string name="error_loading">Something went wrong. Pull to refresh.</string>
    <string name="no_offers_available">No offers available right now.</string>
    <string name="no_transactions">No transactions found.</string>

    <!-- Partners -->
    <string name="bunnings_warehouse">Bunnings Warehouse</string>
    <string name="coles">Coles</string>
    <string name="first_choice">First Choice Liquor Market</string>
    <string name="kmart">Kmart</string>
    <string name="liquorland">Liquorland</string>
    <string name="officeworks">Officeworks</string>
    <string name="reddy_express">Reddy Express</string>
    <string name="swaggle">Swaggle</string>
    <string name="target">Target</string>
</resources>
